в сваггере добавлен вывод чатов по типу
